--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -67,8 +67,11 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1.0.5
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.1
+        with:
+          # A file, directory or wildcard pattern that describes what to upload
+          path: ./out
 
   # Deployment job
   deploy:
