--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@mui/x-data-grid": "^5.17.14",
     "lodash": "^4.17.21",
     "next": "^13.0.4",
     "react": "^18.2.0",
