--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@mui/x-data-grid": "^5.17.14",
+    "bluebird": "^3.7.2",
     "lodash": "^4.17.21",
     "next": "^13.0.4",
     "react": "^18.2.0",
